Cpp/workspace_eclipse/.metadata/.plugins/org.eclipse.cdt.ui/opt_out2_server.build.log
15:28:20 **** Incremental Build of configuration Debug for project opt_out2_server ****
Info: Internal Builder is used for build
g++ "-IC:\\cygwin64\\lib\\gcc\\x86_64-pc-cygwin\\4.8.3\\include" "-IC:\\cygwin64\\lib\\gcc\\x86_64-pc-cygwin\\4.8.3\\include-fixed" "-IC:\\cygwin64\\usr\\include" "-IC:\\cygwin64\\usr\\include\\w32api" -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\opt_out2_server.o" "..\\src\\opt_out2_server.cpp" 
..\src\opt_out2_server.cpp: In function 'int main(int, char**)':
..\src\opt_out2_server.cpp:86:25: error: 'fork' was not declared in this scope
         int PID1 = fork();
                         ^
..\src\opt_out2_server.cpp:91:22: error: 'close' was not declared in this scope
          close(sockfd);
                      ^
..\src\opt_out2_server.cpp:107:22: error: 'close' was not declared in this scope
          close(sockfd);
                      ^
..\src\opt_out2_server.cpp:125:21: error: 'close' was not declared in this scope
         close(new_fd);
                     ^

15:28:21 Build Finished (took 270ms)

